--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
 <title>Moozahar</title>
 <style>
   * { margin:0; padding:0; box-sizing:border-box; }
-
   body, html {
     height: 100%; width: 100%;
     font-family: Arial, sans-serif;
-    overflow: hidden;
-    background: linear-gradient(120deg, #ff4500, #ff8c00, #ffd700);
     color: white;
+    overflow: hidden;
     position: relative;
+    background: #000;
   }
 
-  canvas#fireParticles {
+  video#bgVideo {
     position: fixed; top:0; left:0;
     width:100%; height:100%;
+    object-fit: cover;
     z-index: -1;
   }
 
@@ -30,7 +30,6 @@
     z-index: 10;
     flex-direction: column; text-align: center;
   }
-
   #popup button {
     padding: 15px 30px;
     font-size: 18px;
@@ -73,7 +72,7 @@
 
   #footer {
     position: absolute; bottom: 20px; width:100%;
-    text-align:center; font-size: 14px; color: #fff;
+    text-align:center; font-size: 14px; color: #ccc;
   }
 
   @media (max-width:600px){
@@ -84,7 +83,10 @@
 </head>
 <body>
 
-<canvas id="fireParticles"></canvas>
+<video id="bgVideo" autoplay muted loop>
+  <source src="Background.mp4" type="video/mp4">
+  Your browser does not support HTML5 video.
+</video>
 
 <div id="popup">
   <h2>برای ادامه کلیک کنید</h2>
@@ -119,50 +121,6 @@
     popup.style.display = 'none';
     music.play().catch(e => console.log("User interaction required to play music"));
   });
-
-  // ==== Fire Particles ====
-  const canvas = document.getElementById('fireParticles');
-  const ctx = canvas.getContext('2d');
-  let w = canvas.width = window.innerWidth;
-  let h = canvas.height = window.innerHeight;
-  const particles = [];
-
-  window.addEventListener('resize', ()=>{
-    w = canvas.width = window.innerWidth;
-    h = canvas.height = window.innerHeight;
-  });
-
-  function createParticle(){
-    return {
-      x: Math.random()*w,
-      y: h + Math.random()*100,
-      radius: Math.random()*3+1,
-      speedY: Math.random()*1 + 0.5,
-      color: `rgba(255,${Math.floor(Math.random()*155+100)},0,${Math.random()*0.5+0.5})`
-    };
-  }
-
-  for(let i=0;i<150;i++){
-    particles.push(createParticle());
-  }
-
-  function animate(){
-    ctx.clearRect(0,0,w,h);
-    particles.forEach(p=>{
-      p.y -= p.speedY;
-      if(p.y < -10){
-        Object.assign(p, createParticle());
-        p.y = h + 10;
-      }
-      ctx.beginPath();
-      ctx.arc(p.x, p.y, p.radius, 0, Math.PI*2);
-      ctx.fillStyle = p.color;
-      ctx.fill();
-    });
-    requestAnimationFrame(animate);
-  }
-
-  animate();
 </script>
 
 </body>
